etc/irssi: Ignore noise in #vim

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -31,6 +31,7 @@ ignores = (
       "#raspbian",
       "#systemd",
       "#ubuntu",
+      "#vim",
       "##windows",
       "#xorg",
       "#zenoss",
