etc/repkg: Group rules together by category, not package

--- a/etc/repkg/rules.conf
+++ b/etc/repkg/rules.conf
@@ -1,68 +1,50 @@
-# BASH =========================================================================
-package bash
+# SHELL ========================================================================
 
-# https://bugs.archlinux.org/task/14086 (closed)
-# https://bugs.archlinux.org/task/38766 (closed)
-# https://bugs.archlinux.org/task/42134 (closed)
+# https://bugs.archlinux.org/task/14086
+# https://bugs.archlinux.org/task/38766
+# https://bugs.archlinux.org/task/42134
+package bash
 delete-file /usr/bin/sh
 remove-provide sh
-
-
-# DASH =========================================================================
 package dash
-
-# https://bugs.archlinux.org/task/14086 (closed)
-# https://bugs.archlinux.org/task/38766 (closed)
-# https://bugs.archlinux.org/task/42134 (closed)
 create-link /usr/bin/sh dash
 add-provide sh
 
 
-# DEBOOTSTRAP ==================================================================
+# DEPENDENCIES =================================================================
+
+# The "base" group is a bag of issues:
 package debootstrap
-
-# base group dependency
 add-depend bash
-# NOTE: with pacman 5.1, there will be a new command `pacman-conf`, which makes
-# sourcing makepkg.conf obsolete, and then the bash dependency can be dropped as
-# well.
-
-
-# GLIBC ========================================================================
 package glibc
-
-# base group dependency
 add-optdepend sed: for locale-gen
 
-
-# LIGHTTPD =====================================================================
+# https://bugs.archlinux.org/task/45902
 package lighttpd
-
-# https://bugs.archlinux.org/task/45902 (closed)
 remove-depend systemd
 
-# https://bugs.archlinux.org/task/51931
-# Can be solved by either of these two:
-apply /usr/lib/tmpfiles.d/lighttpd.conf lighttpd-tmpfiles.patch
-#change-mode /var/cache/lighttpd 755
-
-
-# PACMAN =======================================================================
-package pacman
-
 # https://bugs.archlinux.org/task/40464
+package pacman
 add-optdepend fakeroot: for checkupdates
 
-# we have a meta-package for base-devel
+# The "base-devel" group is a meta-package in the zuepfe repos:
+package pacman
 add-optdepend base-devel: for building packages with makepkg
 
-
-# PASS =========================================================================
-package pass
-
 # https://bugs.archlinux.org/task/55059
+package pass
 remove-depend xclip
 add-optdepend xclip: for X clipboard usage
 
 # https://bugs.archlinux.org/task/55504
+package pass
 add-optdepend xdotool: for passmenu
+
+
+# OTHER ISSUES =================================================================
+
+# https://bugs.archlinux.org/task/51931
+package lighttpd
+apply /usr/lib/tmpfiles.d/lighttpd.conf lighttpd-tmpfiles.patch
+# Alternative solution:
+#change-mode /var/cache/lighttpd 755
