etc/repkg: Adapt `apply` commands for syntax change
Also remove "alternative solution" from fixing the lighttpd tmpfiles
issue: It's a less secure approach, so there is no point mentioning it.

--- a/etc/repkg/rules.conf
+++ b/etc/repkg/rules.conf
@@ -45,6 +45,4 @@ add-optdepend xdotool: for passmenu
 
 # https://bugs.archlinux.org/task/51931
 package lighttpd
-apply /usr/lib/tmpfiles.d/lighttpd.conf lighttpd-tmpfiles.patch
-# Alternative solution:
-#change-mode /var/cache/lighttpd 755
+apply lighttpd-tmpfiles.patch /usr/lib/tmpfiles.d/lighttpd.conf
