etc/repkg: Adapt rules file for syntax change

--- a/etc/repkg/rules.conf
+++ b/etc/repkg/rules.conf
@@ -1,48 +1,39 @@
-# SHELL ========================================================================
+# Rules file for repkg.
+# Written by ayekat in winter 2017/2018.
+
+
+# IMPROVEMENTS =================================================================
 
 # https://bugs.archlinux.org/task/14086
 # https://bugs.archlinux.org/task/38766
 # https://bugs.archlinux.org/task/42134
-package bash
-delete-file /usr/bin/sh
-remove-provide sh
-package dash
-create-link /usr/bin/sh dash
-add-provide sh
+bash delete-file /usr/bin/sh
+bash remove-provide sh
+dash create-link /usr/bin/sh dash
+dash add-provide sh
+
+# The "base-devel" group is a meta-package in the zuepfe repos
+pacman add-optdepend base-devel: for building packages with makepkg
 
 
-# DEPENDENCIES =================================================================
-
-# The "base" group is a bag of issues:
-package debootstrap
-add-depend bash
-package glibc
-add-optdepend sed: for locale-gen
-
-# https://bugs.archlinux.org/task/45902
-package lighttpd
-remove-depend systemd
+# BUG FIXES ====================================================================
 
 # https://bugs.archlinux.org/task/40464
-package pacman
-add-optdepend fakeroot: for checkupdates
+pacman add-optdepend fakeroot: for checkupdates
 
-# The "base-devel" group is a meta-package in the zuepfe repos:
-package pacman
-add-optdepend base-devel: for building packages with makepkg
-
-# https://bugs.archlinux.org/task/55059
-package pass
-remove-depend xclip
-add-optdepend xclip: for X clipboard usage
-
-# https://bugs.archlinux.org/task/55504
-package pass
-add-optdepend xdotool: for passmenu
-
-
-# OTHER ISSUES =================================================================
+# https://bugs.archlinux.org/task/45902
+lighttpd remove-depend systemd
 
 # https://bugs.archlinux.org/task/51931
-package lighttpd
-apply lighttpd-tmpfiles.patch /usr/lib/tmpfiles.d/lighttpd.conf
+lighttpd apply lighttpd-tmpfiles.patch /usr/lib/tmpfiles.d/lighttpd.conf
+
+# https://bugs.archlinux.org/task/55059
+pass remove-depend xclip
+pass add-optdepend xclip: for X clipboard usage
+
+# https://bugs.archlinux.org/task/55504
+pass add-optdepend xdotool: for passmenu
+
+# The "base" group is an issue on its own
+debootstrap add-depend bash
+glibc add-optdepend sed: for locale-gen
