etc/repkg: Regroup rules a bit, add quite some comments
Given that there are likely not many people using repkg, it may make
sense to explain the rules to "outsiders" with some comments and
rationale.

--- a/etc/repkg/rules.conf
+++ b/etc/repkg/rules.conf
@@ -2,41 +2,87 @@
 # Written by ayekat in winter 2017/2018.
 
 
-# IMPROVEMENTS =================================================================
+# SYSTEM =======================================================================
 
-# https://bugs.archlinux.org/task/14086
-# https://bugs.archlinux.org/task/38766
-# https://bugs.archlinux.org/task/42134
+# The following rules apply changes that change some more fundamental aspects of
+# the system.
+
+# We let /bin/sh be provided by dash rather than bash. It keeps things strict
+# (yes, even in its so-called "posix mode", bash allows things not stated in
+# POSIX):
+# - https://bugs.archlinux.org/task/14086
+# - https://bugs.archlinux.org/task/38766
+# - https://bugs.archlinux.org/task/42134
 bash delete-file /usr/bin/sh
 bash remove-provide sh
 dash create-link /usr/bin/sh dash
 dash add-provide sh
 
-# The "base-devel" group is a meta-package in the zuepfe repos
-pacman add-optdepend base-devel: for building packages with makepkg
 
-# We don't like applications hardcoding dotfiles in the user's home
+# CONFIGURATION ================================================================
+
+# The following rules fix issues related to configuration files provided by the
+# package maintainers.
+
+# Apparently, there is a CVE in Vim (that Bram Molenaar does not see as such),
+# and the measure taken by the vim-runtimes package maintainer is...
+# half-hearted, to say the least. Yes, this is a case of Arch Linux - not
+# upstream - breaking XDG base directory specification compliance:
 vim-runtime apply vim-swap.patch /usr/share/vim/vimfiles/archlinux.vim
 
 
-# BUG FIXES ====================================================================
+# GROUPS =======================================================================
 
-# https://bugs.archlinux.org/task/40464
-pacman add-optdepend fakeroot: for checkupdates
+# The concept of "groups" is not very well defined in Arch Linux. Some groups
+# just associate a loose list of packages to some aspect (e.g. the `xorg` group:
+# nobody in their right mind would install *all* of them). Other groups are used
+# to bundle software together into some sort of distribution (e.g. various DEs
+# like `gnome` or `xfce4`, or "tool collections" like `base-devel`: those can be
+# considered "poor-man's meta packages").
+#
+# One can (carelessly) install all packages in a group with `pacman -S {group}`,
+# but one can't specify a group as a dependency for a package, so the technical
+# benefits of having groups is also rather limited.
+#
+# The following rules apply some changes to get rid of the downsides of groups
+# in Arch Linux.
 
-# https://bugs.archlinux.org/task/45902
-lighttpd remove-depend systemd
+# The "base-devel" group is provided as a meta-package in the zuepfe repos, so
+# let's actually make use of that:
+pacman add-optdepend base-devel: for building packages with makepkg
 
-# https://bugs.archlinux.org/task/51931
-lighttpd apply lighttpd-tmpfiles.patch /usr/lib/tmpfiles.d/lighttpd.conf
-
-# https://bugs.archlinux.org/task/55059
-pass remove-depend xclip
-pass add-optdepend xclip: for X clipboard usage
-
-# https://bugs.archlinux.org/task/55504
-pass add-optdepend xdotool: for passmenu
-
-# The "base" group is an issue on its own
+# The "base" group... *sigh*:
 debootstrap add-depend bash
 glibc add-optdepend sed: for locale-gen
+
+
+# DEPENDENCIES =================================================================
+
+# The following rules fix general dependency issues (missing or superfluous hard
+# or optional dependencies).
+
+# checkupdates doesn't work without fakeroot:
+# - https://bugs.archlinux.org/task/40464
+pacman add-optdepend fakeroot: for checkupdates
+
+# lighttpd depends on systemd (despite not actually depending on systemd):
+# - https://bugs.archlinux.org/task/45902
+lighttpd remove-depend systemd
+
+# pass itself works fine without xclip (and without X11, for that matter). But
+# passmenu doesn't work without xclip and xdotool:
+# - https://bugs.archlinux.org/task/55059
+# - https://bugs.archlinux.org/task/55504
+pass remove-depend xclip
+pass add-optdepend xclip: for X clipboard usage
+pass add-optdepend xdotool: for passmenu
+
+
+# PERMISSIONS ==================================================================
+
+# The following rules fix issues related to file permissions.
+
+# lighttpd installs /var/cache/lighttpd as 700, but the tmpfiles configuration
+# changes it to 755, leading to warnings during upgrades:
+# - https://bugs.archlinux.org/task/51931
+lighttpd apply lighttpd-tmpfiles.patch /usr/lib/tmpfiles.d/lighttpd.conf
