etc/irssi: Match mentions of re(make)pkg (and the associated BBS thread)

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -224,7 +224,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "([Aa]yekat|[Kk]arui)";
+    text = "([Aa]yekat|[Kk]arui|1771005|re(make)?pkg)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
