etc/irssi: ##mtg

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -22,6 +22,7 @@ ignores = (
       "#debian",
       "#gitlab",
       "#manjaro",
+      "##mtg",
       "#netfilter",
       "#pass",
       "#python",
