--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -225,7 +225,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|karui|1771005|re(make)?pkg|(make)?metapkg)";
+    text = "(ayekat|karui|1771005|remakepkg|(make)?metapkg)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
