--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -40,13 +40,14 @@ ignores = (
     );
     level = "JOINS PARTS QUITS NICKS";
   },
-  { mask = "doek";     level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "leolepro"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "Lowlya";   level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "texom512"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "Yumia";    level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "zephyz";   level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { pattern = "*[m]";  level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "doek";           level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "leolepro";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "Lowlya";         level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "texom512";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "Yumia";          level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "zephyz";         level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "antoinehassler"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { pattern = "*[m]";        level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
 );
 
 aliases = {
