--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -20,6 +20,7 @@ ignores = (
       "#archlinux-security",
       "#claws",
       "#debian",
+      "#freenode",
       "#gitlab",
       "#manjaro",
       "##mtg",
