etc/irssi: Get highlights for AUR packages I contribute(d)

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -228,7 +228,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|karui|1771005|remakepkg|(make)?metapkg)";
+    text = "(ayekat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu)|ttylog|cothority)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
