--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -22,6 +22,7 @@ ignores = (
       "#debian",
       "#freenode",
       "#gitlab",
+      "#gnome",
       "#manjaro",
       "##mtg",
       "#netfilter",
