etc/zr: Add Arachne packages to [aur]

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -13,8 +13,10 @@ vmctl-git
 
 [aur]
 apachedirectorystudio
+arachne-git
 brother-mfc-j5620dw
 cachefilesd
+corearbiter-git
 cower
 epfl-menu-git
 epfl-scripts-git
@@ -22,6 +24,7 @@ ikiwiki
 jmtpfs
 jzip
 myrepos
+perfutils-git
 perl-cgi-formbuilder
 perl-html-treebuilder-xpath
 perl-rpc-xml
