--- a/etc/sh/config
+++ b/etc/sh/config
@@ -53,6 +53,7 @@ fi
 # Random other aliases:
 alias cc='gcc -std=c11 -pedantic -Wall -Wextra -Wbad-function-cast -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal -Wformat=2 -Wlogical-op -Wmissing-declarations -Wmissing-prototypes -Wpointer-arith -Wshadow -Wstrict-prototypes -Wwrite-strings'
 alias gnusik='ssh -t rainbowdash ncmpcpp -h mpd.gnugen.ch'
+alias mpv='mpv --x11-netwm=yes'
 alias todo='grep -n -R "TODO\|FIXME\|XXX" .'
 alias wat='head -n 20 ~/rl/dates'
 
