--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -230,7 +230,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu)|ttylog|cothority)";
+    text = "(ayekat|grumpykat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu)|ttylog|cothority)";
     nick = "yes";
     word = "yes";
     regexp = "yes";
