etc/zr: Add aur/ntfs-3g-system-compression and repkg/ntfs-3g

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -19,6 +19,7 @@ ikiwiki
 jmtpfs
 libfiber-git
 myrepos
+ntfs-3g-system-compression
 perl-html-treebuilder-xpath
 perl-rpc-xml
 perl-xml-xpathengine
@@ -35,6 +36,7 @@ glibc
 gvim
 lighttpd
 ncurses
+ntfs-3g
 pacman
 pacman-contrib
 pass
