etc/irssi: Add #ubuntu on window 5
I'm gonna be spending some time in an Ubuntu 16.04 machine this
semester, so might as well perma-add it for now.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -273,12 +273,22 @@ windows = {
       {
         type = "CHANNEL";
         chat_type = "IRC";
-        name = "#systemd";
+        name = "#ubuntu";
         tag = "znc";
       }
     );
   };
   6 = {
+    items = (
+      {
+        type = "CHANNEL";
+        chat_type = "IRC";
+        name = "#systemd";
+        tag = "znc";
+      }
+    );
+  };
+  7 = {
     items = (
       {
         type = "CHANNEL";
