--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -49,7 +49,7 @@ ignores = (
   { mask = "Yumia";          level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
   { mask = "zephyz";         level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
   { mask = "antoinehassler"; level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "ess_sing";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  { mask = "esssing";        level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
   { pattern = ".*\[m\]";     level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
 );
 
