--- a/etc/sh/config
+++ b/etc/sh/config
@@ -1,19 +1,3 @@
 # Initial shell configuration
-# Written by ayekat on a frustrating evening in september 2014.
 
-# Set OS name, for OS-specific configuration:
-OS_NAME=''
-if [ -e /etc/os-release ]; then
-	OS_NAME="$(. /etc/os-release && echo "$ID")"
-else
-	OS_NAME="$(uname)"
-fi
-export OS_NAME
-
-# Editor and pager:
-export EDITOR='/usr/bin/vim'
-export VISUAL='/usr/bin/vim'
-export PAGER='/usr/bin/less'
-
-# Search in the POSIX section for commands first:
-export MANSECT='1p:1:n:l:8:3:0:2:5:4:9:6:7'
+# <nothing>
