--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -23,6 +23,7 @@ ignores = (
       "#freenode",
       "#gitlab",
       "#gnome",
+      "#gnugeneration",
       "#manjaro",
       "##mtg",
       "#netfilter",
@@ -41,18 +42,7 @@ ignores = (
       "#zsh"
     );
     level = "JOINS PARTS QUITS NICKS";
-  },
-  { mask = "doek";           level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "leolepro";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "Lowlya";         level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "Yumia";          level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "zephyz";         level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "esssing";        level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "esssing_";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "rykerish";       level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "rykerish_";      level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { mask = "ponsfrilus";     level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
-  { pattern = ".*\[m\]";     level = "JOINS PARTS QUITS"; channels = ( "#gnugeneration" ); },
+  }
 );
 
 aliases = {
