etc/irssi: I'm now known as stressedoutcat for this week
Master thesis! Now it's just you and me.

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -222,7 +222,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|grumpykat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu)|ttylog|cothority)";
+    text = "(ayekat|stressedoutcat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
     nick = "yes";
     word = "yes";
     regexp = "yes";
