etc/tmux: Remap a few actions
Alt+... is much less likely to clash with anything else (except for
irssi - but I don't run irssi inside tmux). Also, I never actually use
Space, so get rid of it (I think it's just some leftovers from back when
I switched from screen to tmux---which must've been 6 or 7 years ago).
Also, Space is actually handy for rearranging the layout, I've found.

--- a/etc/tmux/config
+++ b/etc/tmux/config
@@ -28,9 +28,8 @@ set -g pane-active-border-style 'fg=colour148,bg=default'
 # FEEL {{{
 
 # More natural tab selection:
-bind-key Space  select-window -n
-bind-key -n C-l select-window -n
-bind-key -n C-h select-window -p
+bind-key -n M-l select-window -n
+bind-key -n M-h select-window -p
 
 # More vim-like window selection:
 bind-key j select-pane -t :.+
