--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -222,7 +222,7 @@ settings = {
 logs = { };
 hilights = (
   {
-    text = "(ayekat|stressedoutcat|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
+    text = "(ayekat|ayekitten|karui|1771005|remakepkg|(make)?metapkg|epfl-(scripts|menu))";
     nick = "yes";
     word = "yes";
     regexp = "yes";
