etc/zr: Add aur/cfssl and repkg/vault
vault is probably only temporarily, because it's to work around a
compilation bug that likely also affects other people.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -15,6 +15,7 @@ vmctl-git
 
 [aur]
 brother-mfc-j5620dw
+cfssl
 epfl-menu-git
 epfl-scripts-git
 ikiwiki
@@ -42,6 +43,7 @@ ntfs-3g
 pacman
 pacman-contrib
 pass
+vault
 vim
 vim-runtime
 xdg-utils
