etc/zr: Add numix-gtk-theme-git to zuepfe-aur
Temporary solution; I had to modify the PKGBUILD, as it currently
erroneously provides=(numix-gtk-theme-git). Let's hope they fix this
soon.

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -23,6 +23,7 @@ ikiwiki
 jmtpfs
 myrepos
 ntfs-3g-system-compression
+numix-gtk-theme-git
 perl-html-treebuilder-xpath
 perl-rpc-xml
 perl-xml-xpathengine
