etc/zr: Add python-azure-cli

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -30,6 +30,19 @@ perl-xml-xpathengine
 pipepanic
 screen-message
 
+# Azure CLI
+python-adal
+python-applicationinsights
+python-azure-cli
+python-azure-git
+python-azure-multiapi-storage
+python-humanfriendly
+python-knack
+python-msrest
+python-msrestazure
+python-scp
+python-vsts-cd-manager
+
 [repkg]
 acpid
 base-devel
