etc/irssi: Ignore joins/quits/... on ##linux

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -24,6 +24,7 @@ ignores = (
       "#gitlab",
       "#gnome",
       "#gnugeneration",
+      "##linux",
       "#manjaro",
       "##mtg",
       "#netfilter",
