etc/zr: Add adsy repository
Repo for holding AdSy related packages. Kept in a "private" place, as it
might reveal potentially problematic information.

(although, currently there is nothing that would reveal anything juicy,
but it might change in the future)

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -67,6 +67,13 @@ vim-runtime
 xdg-utils
 xorg-xinit
 
+[adsy]
+adsy-?*
+bundle-screen-backlight
+bundle-thunderbolt
+system-gurke
+system-cloudbox
+
 [meta]
 bundle-?*
 zuepfe-?*
