etc/zr: Replace kube{adm,let} by their -git variants

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -6,8 +6,8 @@ fanctl-git
 karuibar-git
 karuiwm-?*-git
 keymaps-ayekat
-kubeadm
-kubelet
+kubeadm-git
+kubelet-git
 ncmpcpp-git
 open-git
 pacman-hacks
