etc/irssi: Ignore join/quit events in #archlinux--aur

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -16,6 +16,7 @@ ignores = (
     channels = (
       "#archlinux",
       "#archlinux-arm",
+      "#archlinux-aur",
       "#archlinux-offtopic",
       "#archlinux-security",
       "#claws",
