etc/zr: Replace kubelet-git and kubeadm-git by their non-git variants

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -6,8 +6,8 @@ fanctl-git
 karuibar-git
 karuiwm-?*-git
 keymaps-ayekat
-kubeadm-git
-kubelet-git
+kubeadm
+kubelet
 ncmpcpp-git
 open-git
 pacman-hacks
