etc/mpd: Don't hardcode home directory path component
XDG_STATE_HOME and XDG_LOG_HOME are still hardcoded, as we can't use
variables.

--- a/etc/mpd/mpd.conf
+++ b/etc/mpd/mpd.conf
@@ -3,11 +3,11 @@ user                 "ayekat"
 bind_to_address      "any"
 port                 "6600"
 
-music_directory      "/home/ayekat/media/music"
-db_file              "/home/ayekat/.local/var/lib/mpd/mpd.db"
-state_file           "/home/ayekat/.local/var/lib/mpd/mpdstate"
-playlist_directory   "/home/ayekat/.local/var/lib/mpd/playlists"
-log_file             "/home/ayekat/.local/var/log/mpd.log"
+music_directory      "~/media/music"
+db_file              "~/.local/var/lib/mpd/mpd.db"
+state_file           "~/.local/var/lib/mpd/mpdstate"
+playlist_directory   "~/.local/var/lib/mpd/playlists"
+log_file             "~/.local/var/log/mpd.log"
 
 samplerate_converter "internal"    # see http://mpd.wikia.com/wiki/Tuning
 audio_output {
