etc/irssi: Ignore join/quits in #saltstack

--- a/etc/irssi/config
+++ b/etc/irssi/config
@@ -35,6 +35,7 @@ ignores = (
       "#qutebrowser",
       "#qutebrowser-offtopic",
       "#raspbian",
+      "#saltstack",
       "#systemd",
       "#ubuntu",
       "#vim",
