etc/zr: Add packages required for fpm to [aur]

--- a/etc/zr/mappings.ini
+++ b/etc/zr/mappings.ini
@@ -52,6 +52,21 @@ python-msrestazure
 python-scp
 python-vsts-cd-manager
 
+# Effing Package Manager:
+fpm
+ruby-arr-pm
+ruby-backports
+ruby-cabin
+ruby-childprocess
+ruby-clamp
+ruby-dotenv
+ruby-insist
+ruby-io-like
+ruby-json-1
+ruby-pleaserun
+ruby-stud
+ruby-xz
+
 [repkg]
 acpid
 base-devel
